--- a/src/SearchResults.css
+++ b/src/SearchResults.css
@@ -19,16 +19,6 @@ td {
     border-bottom: 1px solid black;
 }
 
-.results-icon-container{
-    @apply absolute top-[52rem]
-}
-
-@media(min-width:600px){
-    .results-icon-container{
-        @apply absolute top-[59rem]
-    }
-    
-}
 
 @media(min-width:1280px) {
     .search-outer-container {
@@ -42,9 +32,4 @@ td {
     .table-container {
         height: 400px;
     }
-
-    .results-icon-container{
-        @apply absolute top-[47.5rem]
-    }
-    
 }
